# embed

./: Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  rabbit.js  tsconfig.json  vercel.json
api/: embed.js  embed.rs  index.js  index.rs  rabbit.js
src/: embed.js  embed.rs  logging.rs  main.rs
