[package]
name = "embed_decrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
dotenv = "0.15.0"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
time = { version = "0.3.37", features = [ "formatting" ] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
vercel_runtime = "1.1.0"

[[bin]]
name = "index"
path = "api/index.rs"

[[bin]]
name = "embed"
path = "api/embed.rs"
